@@ -18,6 +18,8 @@
 
     <Button Name="cmdOptionalStarts" Caption="Details" X="2" Y="-27" Width="180" Height="25"
             OnClick="OnOptionalStartsClicked"/>
+    <CheckBox Name="ScoreExit" Caption="Score exit"
+              X="2" Y="-27" Width="120" Height="-2"/>
   </Panel>
 
   <SymbolButton Name="butPrevious" Caption="&lt;" X="0" Y="-35" Width="60" Height="35" OnClick="OnPreviousClicked"/>
